objects/Agenda__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Description__c</fullName>
        <label>Agenda Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Agenda_Display_Order__c</fullName>
        <label>Agenda Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agenda_Name__c</fullName>
        <label>Agenda Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda_Type__c</fullName>
        <label>Agenda Type</label>
        <picklist>
            <picklistValues>
                <fullName>Event level Agenda</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Track level Agenda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLN_Ticket__c</fullName>
        <label>BLN Ticket</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipLabel>BLN Agendas</relationshipLabel>
        <relationshipName>BLN_Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_Track__c</fullName>
        <label>BLN_Track</label>
        <referenceTo>BLN_Track__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Agendas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <label>Video</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN Agenda</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agenda Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Agendas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>